# UIUK_QUAD

./: .gitignore
src/: CMakeCache.txt  Hubodog5.cbp  Makefile  cmake_install.cmake
src/Hubodog5/: CAN_PROTOCAL.ods  CMakeLists.txt  DIO_DEFINITION.ods
src/Hubodog5/src/: BasicMath.h  BasicMatrix.h  JointInformation.h  NETWORK_UI.cpp  NETWORK_UI.h  RBCAN.cpp  RBCAN.h  RBCAN_BACK.cpp  RBCommon.h  RBDaemon.cpp  RBDaemon.h  RBDataType.h  RBIMUSensor.cpp  RBIMUSensor.h  RBJoystick.cpp  RBJoystick.h  RBLANComm.cpp  RBLANComm.h  RBMotion.cpp  RBMotion.h  RBMotorController.cpp  RBMotorController.h  RBSharedMemory.h  index_notation.h  main.cpp
src/Hubodog5/src/Controller/: MPC_calc.cpp  QP_Walking.cpp  func_general.cpp  func_general.h  func_kinematics.cpp  func_kinematics.h  func_mpc.cpp  func_sensor.cpp  func_sensor.h  func_uiuk.cpp  func_uiuk.h  hubodog5_general.cpp  hubodog5_general.h  hubodog5_struct.h  main_controller.cpp  main_controller.h  state_estimator.cpp  state_estimator.h  task_MPC.cpp  task_comcontrol_test.cpp  task_dance01.cpp  task_demo.cpp  task_flyingtrot.cpp  task_hopping_test.cpp  task_onelegtest.cpp  task_trot_test.cpp
src/Hubodog5/src/ESTIMATOR/: estimator.cpp  estimator.h  kinematics.cpp  kinematics.h  operation.cpp  operation.h  robot_parameters.cpp  robot_parameters.h
src/Hubodog5/src/ESTIMATOR_MIT/: PositionVelocityEstimator.cpp  PositionVelocityEstimator.h  cppTypes.h  orientation_tools.h
src/Hubodog5/src/RBModel/: isnl_opengl_globject.cpp  isnl_opengl_globject_STL.cpp
src/Hubodog5/src/RBModel/hubodog/: hubodog.urdf
src/Hubodog5/src/RBModel/isnl/base/: mathbase.h
src/Hubodog5/src/RBModel/isnl/opengl/: globject.h
src/Hubodog5/src/gui/: ModelDialog.cpp  ModelDialog.h  ModelDialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Hubodog5/src/qpSWIFT/amd/include/: SuiteSparse_config.h
src/Hubodog5/src/qpSWIFT/amd/src/: amd_1.c  amd_2.c  amd_aat.c  amd_control.c  amd_defaults.c  amd_dump.c  amd_info.c  amd_order.c  amd_post_tree.c  amd_postorder.c  amd_preprocess.c  amd_valid.c
src/Hubodog5/src/qpSWIFT/include/: GlobalOptions.h  Matrices.h  Prime.h  timer.h
src/Hubodog5/src/qpSWIFT/ldl/src/: ldl.c
src/Hubodog5/src/qpSWIFT/src/: Auxilary.c  Prime.c  RUNQP.c  ldl.c  timer.c
